--- a/app/assets/i18n/zh_tw.json
+++ b/app/assets/i18n/zh_tw.json
@@ -1,10 +1,10 @@
 {
-    "main_page.menu_bar.home.title": "首頁",
-    "main_page.menu_bar.home.subtitle": "快速載入你的常用項目",
-    "main_page.menu_bar.explore.title": "探索",
-    "main_page.menu_bar.explore.subtitle": "探索你的下一個世界",
-    "main_page.menu_bar.library.title": "媒體庫",
-    "main_page.menu_bar.library.subtitle": "管理所有收藏",
-    "main_page.menu_bar.multiplayer.title": "多人遊戲",
-    "main_page.menu_bar.multiplayer.subtitle": "與其他玩家展開冒險"
+    "main_page.side_bar.universe_chat": "宇宙通訊",
+    "main_page.side_bar.home": "首頁",
+    "main_page.side_bar.library": "收藏庫",
+    "main_page.side_bar.multiplayer": "多人遊戲",
+    "main_page.side_bar.create_collection": "建立收藏",
+    "main_page.side_bar.explore": "探索收藏",
+    "main_page.side_bar.manage_downloads": "管理下載",
+    "main_page.side_bar.manage_accounts": "管理帳號"
 }
