--- a/app/assets/i18n/zh-TW.json
+++ b/app/assets/i18n/zh-TW.json
@@ -7,7 +7,7 @@
     "main_page.side_bar.explore": "探索收藏",
     "main_page.side_bar.manage_downloads": "管理下載",
     "main_page.side_bar.manage_accounts": "管理帳號",
-    "dialog.setup.01.title": "歡迎使用",
+    "dialog.setup.welcome": "歡迎使用",
     "dialog.setup.01.description": "歡迎你來到 Era Connect！\n開始使用啟動器之前，讓我們協助你進行快速設定，就可以盡情地暢玩遊戲啦。",
     "dialog.setup.01.content.title": "匯入或是新建設定",
     "dialog.setup.01.content.description": "你可以重新開始設定啟動器或是匯入先前的設定",
