feat: better step dialog

--- a/app/assets/i18n/en-US.json
+++ b/app/assets/i18n/en-US.json
@@ -7,5 +7,9 @@
     "main_page.side_bar.explore": "Explore Collections",
     "main_page.side_bar.manage_downloads": "Manage Downloads",
     "main_page.side_bar.manage_accounts": "Manage Accounts",
+    "dialog.ui.skip": "Skip",
+    "dialog.ui.next": "Next",
+    "dialog.ui.back": "Back",
+    "dialog.ui.done": "Done",
     "dialog.setup.welcome": "Welcome"
 }
