--- a/app/assets/i18n/zh-TW.json
+++ b/app/assets/i18n/zh-TW.json
@@ -7,6 +7,10 @@
     "main_page.side_bar.explore": "探索收藏",
     "main_page.side_bar.manage_downloads": "管理下載",
     "main_page.side_bar.manage_accounts": "管理帳號",
+    "dialog.ui.skip": "略過",
+    "dialog.ui.next": "繼續",
+    "dialog.ui.back": "上一步",
+    "dialog.ui.done": "完成",
     "dialog.setup.welcome": "歡迎使用",
     "dialog.setup.01.description": "歡迎你來到 Era Connect！\n開始使用啟動器之前，讓我們協助你進行快速設定，就可以盡情地暢玩遊戲啦。",
     "dialog.setup.01.content.title": "匯入或是新建設定",
